@@ -1,3 +1,10 @@
+Oct 16, 2003
+
+  * MODIFIED: Add source-file to MD5 computation for triples to make it
+    possible to locate the journal snapshot using the MD5.
+
+  * FIXED: Added replay of rdfe_unload/1.
+
 Oct 9, 2003
 
   * MODIFIED: rdf_md5/2 returns a null-digest for an empty source.
